Annotations to attributes
