# src/app/Http/Controllers/Controller.php
@@ -3,30 +3,15 @@
 namespace App\Http\Controllers;
 
 use App\Traits\ResponseTrait;
-use OpenApi\Annotations as OA;
+use OpenApi\Attributes as OA;
 
-/**
- * @OA\Info(
- *     title="Cart-Service API",
- *     version="1.0.0",
- *     description="This API was developed for e-commerce cache based cart management.",
- *     @OA\Contact(
- *         email="bugrabozkurtt@gmail.com"
- *     )
- * )
- *
- * @OA\Server(
- *     url="http://localhost:8084/api/v1",
- *     description="Local API Server"
- * )
- *
- * @OA\SecurityScheme(
- *     securityScheme="bearerAuth",
- *     type="http",
- *     scheme="bearer",
- *     bearerFormat="JWT"
- * )
- */
+#[OA\Info(
+    version: "1.0.0",
+    description: "Cart API Documentation",
+    title: "Cart Service",
+    contact: new OA\Contact(email: "bugrabozkurtt@gmail.com"),
+    license: new OA\License(name: "MIT", url: "https://opensource.org/licenses/MIT")
+)]
 abstract class Controller
 {
     use ResponseTrait;
